app-of-apps/applications/k8s-manifests/minio/minio.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-web
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: minio.devenv.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-s3-api
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: s3.minio.devenv.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
spec:
  ports:
    - protocol: TCP
      port: 9001
      targetPort: http
      name: http
    - protocol: TCP
      port: 9000
      targetPort: s3-api
      name: s3-api
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
  type: ClusterIP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
spec:
  serviceName: minio
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
      app.kubernetes.io/instance: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
        app.kubernetes.io/instance: minio
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: minio
          image: minio/minio:RELEASE.2025-04-22T22-12-26Z
          args:
            - server
            - /data
            - --console-address
            - ':9001'
            - --address
            - ':9000'
            - --certs-dir
            - '/opt/certs/'
          ports:
            - name: http
              containerPort: 9001
            - name: s3-api
              containerPort: 9000
          volumeMounts:
            - name: minio-data
              mountPath: /data
            - name: minio-certs
              mountPath: /opt/certs/CAs/devenv.local.ca.crt
              subPath: tls.crt
              readOnly: true
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data
        - name: minio-certs
          projected:
            sources:
              - secret:
                  name: local-devenv-tls
  volumeClaimTemplates:
    - metadata:
        name: minio-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: hdd-nfs-retain
        volumeMode: Filesystem
        resources:
          requests:
            storage: 128Gi
